[tool.poetry]
name = "36120-amlaa-at2-api-24886400"
version = "0.0.1"
description = ""
authors = ["Rusan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"
numpy = "^2.1.1"
streamlit = "^1.38.0"
fastapi = "0.111.0"
uvicorn = "0.30.1"
joblib = "1.4.2"
xgboost = "^2.1.1"
statsmodels = "^0.14.4"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
